disable text selection + fix loading bar

--- a/website/default.css
+++ b/website/default.css
@@ -107,6 +107,14 @@ body {
     color: #d7ba7d;
     font-size: larger;
     margin: 0px;
+
+    /* disable text selection to omit selection dialog */
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .config {
