clean up navigation + add support link

--- a/website/default.css
+++ b/website/default.css
@@ -195,8 +195,8 @@ body {
 }
 
 #settings-image {
-    height: 1em;
+    height: 0.75em;
     /* padding-top: 1em; */
     display: inline-block;
-    vertical-align: sub;
+    /* vertical-align: sub; */
 }
