--- a/website/default.css
+++ b/website/default.css
@@ -27,7 +27,7 @@ button {
     background-color: dimgrey;
     border: none;
     /* padding: 15px 32px; */
-    text-align: center;
+    text-align: left;
     text-decoration: none;
     display: inline-block;
     font-size: 1.5em;
@@ -35,9 +35,22 @@ button {
     width: 100%;
     color: #d7ba7d;
     margin-top: 5px;
-    height: 3em;
+    /* height: 3em; */
     vertical-align: top;
     font-family: inherit;
+    padding: 0.4em 1em 0.4em 1em;
+    position: relative;
+}
+
+h2 {
+    font-size: 1.8em;
+    margin: 0.5em;
+}
+
+.b-label-status {
+    position: relative;
+    /* display: inline-block; */
+    float: right;
 }
 
 .button-sub {
