--- a/website/styles/default.css
+++ b/website/styles/default.css
@@ -22,6 +22,10 @@ input[type=number] {
     z-index: 20;
 }
 
+.debugging {
+    color: darkred;
+}
+
 button {
     line-height: 0.9em;
     background-color: dimgrey;
