--- a/website/styles/mobile.css
+++ b/website/styles/mobile.css
@@ -12,9 +12,7 @@ input[type=number] {
 }
 
 #Solution {
-    border: 1px solid black;
     margin-bottom: 15px;
-    background-color: black;
     padding-bottom: 20px;
     min-width: 100%;
     position: fixed;
@@ -22,13 +20,8 @@ input[type=number] {
     z-index: 20;
 }
 
-.debugging {
-    color: darkred;
-}
-
 button {
     line-height: 0.9em;
-    background-color: dimgrey;
     border: none;
     /* padding: 15px 32px; */
     text-align: left;
@@ -37,11 +30,9 @@ button {
     font-size: 1.5em;
     cursor: pointer;
     width: 95%;
-    color: #d7ba7d;
     margin-top: 5px;
     /* height: 3em; */
     vertical-align: top;
-    font-family: inherit;
     padding: 0.4em 1em 0.4em 1em;
     position: relative;
 }
@@ -63,17 +54,6 @@ h2 {
     font-size: 0.6em;
 }
 
-header {
-    color: #d7ba7d;
-    /* margin-bottom: 10px; */
-    height: 5em;
-    border-bottom: 3px solid #d7ba7d;
-}
-
-header p {
-    margin: 0em;
-}
-
 h1 {
     margin: 0em;
     margin-top: 0.2em;
@@ -87,31 +67,14 @@ button:focus {
     border: none;
     text-align: center;
     width: 100%;
-    color: #6e270b;
-    background-color: darkgrey;
     height: 2em;
     border-radius: 25px;
     padding: 0px 00px;
     font-size: larger;
-    background-image: url("../img/loading-dark-grey_1.png");
-    background-position: 0%;
-    background-repeat: repeat-y;
-    background-attachment: inherit;
-    /* variable for loading screen 0-120% */
-    background-size: 0%;
-    font-family: inherit;
 }
 
 #solution:focus {
     outline: none !important;
-}
-
-.valid {
-    color: green;
-}
-
-.invalid {
-    color: red;
 }
 
 #wrapper {
@@ -135,11 +98,8 @@ button:focus {
 }
 
 body {
-    background-color: #252526;
-    color: #d7ba7d;
     font-size: larger;
     margin: 0px;
-    font-family: cursive;
     /* disable text selection to omit selection dialog */
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -157,10 +117,7 @@ body {
     height: 2em;
     text-align: center;
     vertical-align: middle;
-    background-color: darkgrey;
-    color: #6e270b;
     border-radius: 25px;
-    font-family: inherit;
 }
 
 .config-label {
@@ -201,16 +158,15 @@ body {
 }
 
 #nav {
-    background-color: black;
     /* padding: 10px 10px 40px 10px; */
     width: 100%;
     min-width: 330px;
     position: absolute;
     left: 0px;
     z-index: 10;
-    /* border: 1px solid #d7ba7d; */
+    /* border: 1px solid; */
     /* top: 0px; */
-    height: calc(100% - 5.5em);
+    height: calc(100% - 6em);
     overflow: auto;
 }
 
@@ -230,7 +186,6 @@ body {
 }
 
 #partial-solutions {
-    font-family: monospace;
     text-align: center;
     white-space: pre;
     padding: 10px;
