--- a/website/styles/desktop.css
+++ b/website/styles/desktop.css
@@ -160,7 +160,7 @@ body {
     padding: 10px 10px 40px 10px;
     min-width: 300px;
     position: absolute;
-    left: 10px;
+    right: 10px;
     z-index: 40;
     border: 1px solid;
     top: 10px;
