--- a/website/styles/tablet.css
+++ b/website/styles/tablet.css
@@ -94,7 +94,6 @@ button:focus {
     border-radius: 25px;
     line-height: 2em;
     display: inline-block;
-    margin: 0.5em;
 }
 
 body {
@@ -130,11 +129,10 @@ body {
 }
 
 #trainer-page {
-    width: 45%;
-    max-width: 400px;
+    width: 100%;
+    min-width: 330px;
     margin: auto;
     display: inline-block;
-    margin: 10px;
     vertical-align: top;
 }
 
