--- a/website/styles/desktop.css
+++ b/website/styles/desktop.css
@@ -29,7 +29,7 @@ button {
     display: inline-block;
     font-size: 1.5em;
     cursor: pointer;
-    width: 100%;
+    width: 95%;
     margin-top: 5px;
     /* height: 3em; */
     vertical-align: top;
@@ -138,7 +138,7 @@ body {
 
 #config {
     margin: 10px auto;
-    /* width: 350px; */
+    width: 95%;
     text-align: left;
 }
 
@@ -149,6 +149,9 @@ body {
 #control {
     /* width: 350px; */
     margin: auto;
+    overflow: auto;
+    height: calc(100% - 3em);
+    border-left: 1px solid;
 }
 
 .hidden {
@@ -161,9 +164,7 @@ body {
     position: absolute;
     right: 10px;
     z-index: 40;
-    border: 1px solid;
     height: calc(100% - 9em);
-    overflow: auto;
     max-width: 30%;
     width: 45%;
     margin-top: 15px;
