--- a/website/styles/mobile.css
+++ b/website/styles/mobile.css
@@ -150,6 +150,8 @@ body {
 #control {
     /* width: 350px; */
     margin: auto;
+    overflow: auto;
+    height: calc(100% - 5em);
 }
 
 .hidden {
@@ -166,7 +168,6 @@ body {
     /* border: 1px solid; */
     /* top: 0px; */
     height: calc(100% - 6em);
-    overflow: auto;
 }
 
 #input {
