--- a/website/styles/tablet.css
+++ b/website/styles/tablet.css
@@ -158,18 +158,13 @@ body {
     display: none !important;
 }
 
-#nav {
-    /* padding: 10px 10px 40px 10px; */
-    /* min-width: 100%; */
+.page {
     position: absolute;
-    /* left: 0px; */
     z-index: 10;
-    /* border: 1px solid; */
-    /* top: 0px; */
     height: calc(100% - 5.5em);
     max-width: 648px;
     margin: auto;
-    /* width: 45%; */
+    width: 100%;
 }
 
 #input {
