--- a/website/styles/global.css
+++ b/website/styles/global.css
@@ -118,3 +118,12 @@ button:focus {
     width: 90%;
     display: block;
 }
+
+#Solution {
+    margin-bottom: 15px;
+    padding-bottom: 20px;
+    min-width: 100%;
+    position: fixed;
+    left: 0px;
+    z-index: 60;
+}
