remove nav hiding exept in page.js + fix stats css

--- a/website/styles/tablet.css
+++ b/website/styles/tablet.css
@@ -96,11 +96,10 @@ body {
     margin: 10px auto;
 }
 
-#control {
-    /* width: 350px; */
+.subpage {
     margin: auto;
-    overflow: auto;
     height: calc(100% - 5em);
+    overflow: auto;
 }
 
 .hidden {
