--- a/website/styles/themes/dark.css
+++ b/website/styles/themes/dark.css
@@ -22,7 +22,7 @@ header {
 }
 
 #solution {
-    color: #6e270b;
+    color: darkgreen;
     background-color: darkgrey;
     background-image: url("../../img/loading-dark-grey_1.png");
     background-position: 0%;
