--- a/website/styles/tablet.css
+++ b/website/styles/tablet.css
@@ -39,7 +39,7 @@ input[type=number] {
     font-size: xx-large;
 }
 
-#current-task {
+#task p {
     border-radius: 25px;
     line-height: 2em;
     display: inline-block;
@@ -61,7 +61,7 @@ body {
     width: 100%;
     min-width: 330px;
     margin: auto;
-    display: inline-block;
+    /* display: inline-block; */
     vertical-align: top;
 }
 
