add solution guide + add voice tech button

--- a/website/styles/themes/dark.css
+++ b/website/styles/themes/dark.css
@@ -53,9 +53,7 @@ body {
     color: cyan;
 }
 
-#f1::placeholder,
-#f2::placeholder,
-#autoTaskInput::placeholder {
+#nav input::placeholder {
     color: #252526;
 }
 
