--- a/website/styles/global.css
+++ b/website/styles/global.css
@@ -218,6 +218,27 @@ button:disabled {
     right: -0.2em;
 }
 
+
+/* div.skiptranslate {
+    display: none !important;
+} */
+
+body {
+    top: 0px !important;
+}
+
+body>.skiptranslate {
+    display: none;
+    /* height: 0em;
+    line-height: 0em;
+    position: absolute; */
+}
+
+
+/* .goog-te-banner-frame {
+    display: none;
+} */
+
 #Solution {
     margin-bottom: 15px;
     padding-bottom: 20px;
