--- a/website/styles/themes/dark.css
+++ b/website/styles/themes/dark.css
@@ -44,7 +44,7 @@ header {
 body {
     background-color: #252526;
     color: #d7ba7d;
-    font-family: cursive;
+    font-family: sans-serif;
 }
 
 #button-language-selection {
