--- a/website/styles/global.css
+++ b/website/styles/global.css
@@ -216,6 +216,10 @@ button:disabled {
     margin: auto;
 }
 
+.subpage h3 {
+    margin-bottom: 1em;
+}
+
 #logging-list {
     font-family: monospace;
     font-size: 0.7em;
@@ -277,7 +281,7 @@ body>.skiptranslate {
 
 #logging-list li.tooltip .tooltiptext {
     visibility: hidden;
-    width: 90%;
+    width: 95%;
     background-color: #555;
     color: #fff;
     text-align: center;
@@ -285,12 +289,12 @@ body>.skiptranslate {
     padding: 5px 0;
     position: absolute;
     z-index: 1;
-    bottom: 125%;
     opacity: 0;
     transition: opacity 0.3s;
     text-overflow: unset;
     white-space: normal;
     font-size: 2em;
+    overflow-wrap: break-word;
 }
 
 #logging-list li.tooltip span.tooltiptext::after {
