--- a/website/styles/themes/dark.css
+++ b/website/styles/themes/dark.css
@@ -21,18 +21,6 @@ header {
     font-family: inherit;
 }
 
-#solution {
-    color: darkgreen;
-    background-color: darkgrey;
-    background-image: url("../../img/loading-dark-grey_1.png");
-    background-position: 0%;
-    background-repeat: repeat-y;
-    background-attachment: inherit;
-    /* variable for loading screen 0-120% */
-    background-size: 0%;
-    font-family: inherit;
-}
-
 .valid {
     color: green;
 }
@@ -45,6 +33,8 @@ body {
     --theme-color-2: #252526;
     --theme-color-3: darkcyan;
     --theme-color-4: green;
+    --theme-color-5: darkgreen;
+    --theme-color-6: darkgray;
 }
 
 #button-language-selection {
