--- a/website/styles/mobile.css
+++ b/website/styles/mobile.css
@@ -76,13 +76,12 @@ body {
 
 #header figure {
     margin: 0.5em;
-    margin-top: 0.2em;
 }
 
 .page {
-    height: calc(100% - 6em);
+    height: calc(100vh - 5.5em);
     z-index: 10;
-    position: absolute;
+    position: relative;
     min-width: 330px;
     width: 100%;
 }
