--- a/website/styles/tablet.css
+++ b/website/styles/tablet.css
@@ -83,9 +83,9 @@ body {
 }
 
 .page {
-    position: absolute;
+    position: relative;
     z-index: 10;
-    height: calc(100% - 5.5em);
+    height: calc(100vh - 5.5em);
     max-width: 648px;
     margin: auto;
     width: 100%;
