--- a/website/styles/global.css
+++ b/website/styles/global.css
@@ -128,7 +128,7 @@ header p {
     cursor: pointer;
     width: 100%;
     margin-top: 5px;
-    /* height: 3em; */
+    height: 3em;
     vertical-align: top;
     padding: 0.4em 1em 0.4em 1em;
     position: relative;
