- first shot for design themes #4 - refactoring for using sass

--- a/website/app/styles/global.css
+++ b/website/app/styles/global.css
@@ -190,7 +190,7 @@ button:focus {
 }
 
 button:disabled {
-    color: black;
+    color: var(--theme-color-9);
     text-decoration: line-through !important;
 }
 
