--- a/website/app/styles/global.css
+++ b/website/app/styles/global.css
@@ -96,6 +96,7 @@ header p {
 
 #trainer-page {
     overflow: auto;
+    top: 10px;
 }
 
 .inactive-page-icon {
@@ -293,4 +294,25 @@ body>.skiptranslate {
 .tooltipvisible {
     visibility: visible !important;
     opacity: 1 !important;
+}
+
+.topFaid {
+    width: 100%;
+    height: 0;
+    background: linear-gradient(var(--theme-color-2), transparent);
+    position: fixed;
+    z-index: 1000000;
+    pointer-events: none;
+    opacity: 1;
+}
+
+.bottomFaid {
+    width: 100%;
+    height: 50px;
+    background: linear-gradient(transparent, var(--theme-color-2));
+    position: fixed;
+    bottom: 0px;
+    z-index: 1000000;
+    pointer-events: none;
+    opacity: 1;
 }
